namespace Resources.Enums;

/// <summary>
/// Форматы индексных буферов
/// </summary>
public enum IndexFormat
{
  UInt16,
  UInt32
}
